# DataAsk

./: .gitignore  README.md  app.py  backup_dataask_20250725_085426.sql  config.py  deploy.sh  env.example  generate_password.py  license_manager.py  pyproject.toml  requirements.txt  start.sh  start_dataask.sh  stop_dataask.sh  test_e2e_integration.sh  test_vanna_api.sh  text2sql_integration_success_report.md  使用说明.md  启动Text2SQL功能指南.md
AIEngine/: __init__.py
api/: __init__.py  ai_routes.py  audit_routes.py  auth_routes.py  message_routes.py  organization_routes.py  role_permission_routes.py  routes.py  system_routes.py  text2sql_routes.py  user_routes.py  workflow_routes.py
config/: airflow_config.py  base_config.py
dataask_front/: angular.json  karma.conf.js  ng-alain.json  package-lock.json  package.json  proxy.conf.js  test-run.sh
docker/: docker-compose.airflow.yml
docs/: icons-guide.md  vanna集成方案完整版.md  产品api说明.md  启动说明.md  图标清单.md  工作流增强功能说明.md  工作流管理模块重构完成报告.md  权限控制体系优化实施方案.md
frontend/: angular.json  icon.md  navigation-guide.md  ng-alain.json  package.json  proxy.conf.js
middleware/: __init__.py  license_middleware.py
models/: __init__.py  base.py  organization.py  permission.py  role.py  user.py
scripts/: init_permission_system.py  init_vanna_db.py  setup_workflow.sh
service/: __init__.py  ai_service.py  audit_service.py  enhanced_permission_service.py  enhanced_workflow_service.py  menu_service.py  organization_service.py  permission_service.py  role_service.py  user_service.py  workflow_service.py  workflow_service_enhancement.py
(+296 files in other folders)
